--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "underscore": ">=1.4.4",
     "coffee-script": ">=1.7.1",
     "underscore.deferred": ">=0.4.0",
-    "node-schedule": "~0.1.13"
+    "node-schedule": "~0.1.13",
+    "express": "~3.5.1"
   }
 }
